# soccernetpy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  github-actions-demo.yml
python/soccernetpy/: __init__.py
src/: lib.rs
