[package]
name = "soccernetpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "soccernetpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
soccer-rs = "0.1.4"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
openssl-sys = { version = "0.9.117", features = ["vendored"] }